# etl-toolkit

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .pypirc  README.md  Wiki.md  pyproject.toml  requirements.txt
.azure_devops/: installer.sh  pipelines.yml
src/ananta/: core.py  utilities.py
src/ananta/Common/: Constants.py  CustomLogger.py  CustomSpark.py  Functions.py  Messages.py  __init__.py
src/ananta/DataContract/: Broker.py  Contract.py
src/ananta/DataOnboarder/Processor/: BaseProcessor.py  FileReader.py  IBaseProcessor.py  IFileReader.py  __init__.py
src/ananta/DataReport/: BaseReport.py  Catalog.py  Profiler.py  Quality.py
src/ananta/sandbox/: ananta-landed.ipynb  anantasandbox-landed.ipynb  anantasandbox-landed.py  anantasandbox-processed.py  contractsandbox.py  createcontractsandbox.py  filereadersandbox.py  miscsandbox.py  processorsandbox.py  pydeequsandbox.py  read_parquet.py  sandbox.ipynb  something.py
src/ananta/tests/: test_datacontract.py  test_datacontract_broker.py
